--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "winston-azure-application-insights",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Azure Application Insights transport for Winston",
   "main": "./lib/winston-azure-application-insights.js",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.0.0"
   },
   "directories": {
     "test": "test"
@@ -38,18 +38,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "applicationinsights": "~1.0.6",
+    "applicationinsights": "~2.2.0",
     "chai": "^4.1.2",
-    "eslint": "^5.6.1",
+    "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^7.2.0",
-    "sinon": "^4.4.2",
-    "winston": "^3.1.0"
-  },
-  "peerDependencies": {
-    "applicationinsights": "~1.0.6",
-    "winston": "^3.1.0"
+    "mocha": "~9.2.0",
+    "sinon": "^13.0.1",
+    "winston": "~3.5.0"
   },
   "bugs": {
     "url": "https://github.com/willmorgan/winston-azure-application-insights/issues"
