--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "winston-azure-application-insights",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Azure Application Insights transport for Winston",
   "main": "./lib/winston-azure-application-insights.js",
   "engines": {
@@ -38,20 +38,21 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "applicationinsights": "~2.2.0",
-    "chai": "^4.1.2",
-    "eslint": "^8.8.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "~9.2.0",
-    "sinon": "^13.0.1",
-    "winston": "~3.5.0"
+    "applicationinsights": "^2.9.1",
+    "chai": "^4.3.10",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1",
+    "winston": "^3.11.0"
   },
   "bugs": {
     "url": "https://github.com/willmorgan/winston-azure-application-insights/issues"
   },
   "homepage": "https://github.com/willmorgan/winston-azure-application-insights#readme",
-  "dependencies": {
-    "winston-transport": "^4.2.0"
+  "peerDependencies": {
+    "applicationinsights": "^2.x",
+    "winston": "^3.x"
   }
 }
