--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2022,
     "sourceType": "module"
   },
   "env": {
@@ -10,6 +10,7 @@
   },
   "rules": {
     "camelcase": ["off"],
+    "max-classes-per-file": ["off"],
     "comma-dangle": ["error", "always-multiline"],
     "indent": ["error", 4],
     "no-mixed-operators": ["off"],
@@ -17,7 +18,5 @@
     "no-plusplus": ["off"],
     "quote-props": ["error", "consistent-as-needed"]
   },
-  "extends": [
-    "airbnb-base/legacy"
-  ]
+  "extends": ["airbnb-base/legacy"]
 }
