--- a/package.json
+++ b/package.json
@@ -58,9 +58,10 @@
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@typescript-eslint/parser": "^8.6.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "globals": "^15.9.0",
     "mocha": "^10.7.3",
     "npm-run-all2": "^6.2.3",
     "terser": "^5.33.0",
