--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,12 @@
     "isolatedModules": true,
     "resolveJsonModule": true
   },
-  "exclude": ["dist/","node_modules"],
+  "exclude": [
+    "dist/",
+    "node_modules"
+  ],
   "include": [
     "**/*.ts",
     "test/**/*.spec.ts"
-, "eslint.config.js"  ]
+  ]
 }
