--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "build": "run-s build:source build:types",
     "build:source": "tsup",
     "build:types": "tsup --dts-only --format cjs",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "lint": "biome lint",
+    "format": "biome format",
+    "check": "biome check",
     "test": "mocha",
     "prepublishOnly": "run-p lint build",
     "postpublish": "pnpm version --no-git-tag-version patch"
@@ -55,6 +56,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "^1.9.2",
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.5.5",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
@@ -63,6 +65,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "globals": "^15.9.0",
+    "logform": "^2.6.1",
     "mocha": "^10.7.3",
     "npm-run-all2": "^6.2.3",
     "terser": "^5.33.0",
@@ -77,7 +80,8 @@
   },
   "homepage": "https://github.com/shellicar/winston-azure-application-insights#readme",
   "dependencies": {
-    "applicationinsights": "^3.3.0",
+    "applicationinsightsv2": "npm:applicationinsights@^2",
+    "applicationinsightsv3": "npm:applicationinsights@^3",
     "winston-transport": "^4.7.1"
   }
 }
