--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shellicar/winston-azure-application-insights",
-  "version": "5.0.2",
+  "version": "5.0.3",
   "private": false,
   "description": "Azure Application Insights transport for Winston",
   "files": ["dist"],
@@ -25,7 +25,7 @@
     "format": "biome format",
     "check": "biome check",
     "test": "mocha",
-    "prepublishOnly": "run-p lint build",
+    "prepublishOnly": "run-p check build test",
     "postpublish": "pnpm version --no-git-tag-version patch"
   },
   "repository": {
