--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shellicar/winston-azure-application-insights",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "private": false,
   "description": "Azure Application Insights transport for Winston",
   "files": ["dist"],
@@ -25,8 +25,10 @@
     "lint": "biome lint",
     "format": "biome format",
     "check": "biome check",
+    "ci": "biome ci --diagnostic-level=error",
+    "ci:fix": "biome check --diagnostic-level=error --fix",
     "test": "mocha",
-    "prepublishOnly": "run-p check build test",
+    "prepublishOnly": "run-p ci build test",
     "postpublish": "pnpm version --no-git-tag-version patch"
   },
   "repository": {
